(library
 (name t_bitwuzla_cxx)
 (optional)
 (modules t_bitwuzla_cxx)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_inline_test))
 (libraries bitwuzla-cxx))

(library
 (name t_bitwuzla_cxx_small)
 (optional)
 (modules t_bitwuzla_cxx_small)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_inline_test))
 (libraries bitwuzla-cxx))
